--- a/resample.ipynb
+++ b/resample.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "\n",
     "def extract_RGB(input_file, output_file=None):\n",
-    "    \"\"\"Extracts the first 3 channels of an input geotiff file and saves them to a PNG or JPEG file.\n",
+    "    \"\"\"Extracts the first 3 channels of an input (16Bit) geotiff file and saves them to a PNG or JPEG file.\n",
     "\n",
     "    Args:\n",
     "        input_file (str): The path to the input geotiff file.\n",
@@ -101,7 +101,7 @@
     "        data = src.read(indexes=[1, 2, 3])\n",
     "    data_float = data.astype('float32')\n",
     "    data_float[(data_float == 0) | (data_float == 65535.0)] = np.nan\n",
-    "    # NoData 无效像元占比多于阈值，删除数据\n",
+    "    # NoData percentage threshold\n",
     "    if np.count_nonzero(np.isnan(data_float)) / data_float.size > 0.2 :\n",
     "        return\n",
     "    # Calculate the percentile range of each channel\n",
@@ -145,8 +145,7 @@
     "        image.save(output_file)\n",
     "    elif format == 'jpg':\n",
     "        image.convert('RGB').save(output_file)\n",
-    "!rm ./Dataset/Guochan_HR/*.png\n",
-    "extract_RGB('../超分重建数据/高分_切片去坐标/image_chips/xiangqian2resamplecut_0_4.tif', 'test.png')"
+    "!rm ./Dataset/Guochan_HR/*.png"
    ]
   },
   {
